--- a/react-hook-version/src/index.css
+++ b/react-hook-version/src/index.css
@@ -1,10 +1,109 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #FFA17F;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #00223E, #FFA17F);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #00223E, #FFA17F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: left;
+  margin: auto;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+text-align: center;
+margin: auto;
+width: 55%;
+margin-top: 4%;
+background: #ffffff;
+padding: 20px;
+margin-bottom: 20px;
+border-bottom: 7px solid #38bd38;
+}
+
+.container i {
+  color: #b1cf3a;
+}
+
+.logo-escrito {
+font-size: 40px;
+font-weight: bold;
+margin-bottom: 20px;
+margin: auto;
+width: auto;
+color: #38bd38;
+}
+
+.search {
+padding: 20px;
+display: flex;
+}
+
+.search input {
+border: 1px solid #d9d9d9;
+padding: 10px;
+width: 70%;
+color: #000000;
+font-weight: bold;
+margin-right: 10px;
+}
+
+.estilo-boton {
+padding: 8px;
+background: #38bd38;
+border: 1px solid #38bd38;
+color: #ffffff;
+font-weight: bold;
+border-radius: 2px;
+width: 20%;
+}
+
+
+.renderizado-datos {
+  background: #ffffff;
+  padding: 30px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+
+.resultado-api {
+  display: flex;
+}
+
+.imagen-portada img {
+  width: 288px;
+}
+
+.datos-api {
+  margin-left: 20px;
+}
+
+.datos-api h2 {
+  margin: auto;
+  margin-bottom: 10px;
+  font-size: 22px;
+  color: #38bd38;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.datos-api2, .datos-api2 h1 {
+  font-size: 14px;
+  font-weight: lighter;
+}
+
+.datos-api2 span {
+font-weight: bold;
+line-height: 22px;
+color: green;
+}
+
+.alerta {
+  background: red;
+  color: #ffffff;
+  padding: 5px;
+  width: 40%;
+  margin: auto;
+  margin-top: 10px;
 }
 
 code {
